kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mats
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: mats.127.0.0.1.nip.io
      http:
        paths:
          - path: /scorecard
            pathType: Prefix
            backend:
              service:
                name: scorecard
                port:
                  number: 80
